--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,8 @@
 font_family      0xProto Nerd Font Mono
 font_size 11.0
 
+window_padding_width 3
+
 # Tabs
 tab_bar_edge bottom
 tab_bar_style powerline
