--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -138,7 +138,11 @@ opacity-rule = [
   "90:class_g = 'kitty' && focused",
   "80:class_g = 'kitty' && !focused",
   "90:class_g = 'vesktop' && focused",
-  "80:class_g = 'vesktop' && !focused"
+  "80:class_g = 'vesktop' && !focused",
+  "90:class_g = 'st-256color' && focused",
+  "80:class_g = 'st-256color' && !focused",
+  "90:class_g = 'tabbed' && focused",
+  "80:class_g = 'tabbed' && !focused",
 ],
 
 
